syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message StoreChunk {
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
}

message RetrieveFile {
    string fileName = 1;
}

message HeartBeat {
    int32 totalFreeSpaceInBytes=1;
    int32 numOfStorageMessage=2;
    int32 numOfRetrievelRequest=3;
}

message StorageMessageWrapper {
    oneof msg {
        StoreChunk storeChunkMsg = 1;
        RetrieveFile retrieveFileMsg = 2;
        HeartBeat heartBeatMsg = 3;
    }
}
